# eda_proyecto

./: .gitignore  CMakeLists.txt  README.md  barrio.cpp  barrio.h  barrios_parser.cpp  barrios_parser.h  main.cpp  neighboord.json  parsing.py  punto_parser.cpp  punto_parser.h  run.sh  script.py  viajes.cpp
Classes/: GlobalConstants.h  Neighborhood.cpp  Neighborhood.h  Point.cpp  Point.h  RTree.cpp  RTree.h  Travel.cpp  Travel.h  TravelPoint.cpp  TravelPoint.h
Classes/Basic/: Neighborhood.cpp  Neighborhood.h  Travel.h  TravelPoint.cpp  TravelPoint.h
Classes/Parser/: NeighborhoodParser.cpp  NeighborhoodParser.h  TravelParser.cpp  TravelParser.h
Classes/Solver/: Solver.cpp  Solver.h
Classes/Spatial/: Definitions.h  Entry.h  Point.h  RNode.cpp  RNode.h  RTree.cpp  RTree.h  Rectangle.h  a.out  main.cpp
DataClasses/: Barrio.cpp  Barrio.h  Punto.cpp  Punto.h  Viajes.cpp  Viajes.h
Notebooks/: data.py  parsing.ipynb
Parser/: BarriosParser.cpp  BarriosParser.h  NeighborhoodParser.cpp  NeighborhoodParser.h  PointParser.cpp  PointParser.h  PuntoParser.cpp  PuntoParser.h  TravelParser.cpp  TravelParser.h
Scripts/: parsing.py
Tests/: Tests.cpp
data_classes/: barrio.cpp  barrio.h  punto.cpp  punto.h  viajes.h
parser/: barrios_parser.cpp  barrios_parser.h  punto_parser.cpp  punto_parser.h
tests/: tests.cpp
